After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 737421 - dashdemux: Playback may attempt to start in wrong period for a live stream
dashdemux: Playback may attempt to start in wrong period for a live stream
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
git master
Other All
: Normal minor
: 1.5.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2014-09-26 10:56 UTC by David Waring
Modified: 2014-12-02 17:38 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
dashdemux: Find first period for live streams (5.66 KB, patch)
2014-09-26 10:56 UTC, David Waring
none Details | Review
dashdemux: Find first period for live streams (6.01 KB, patch)
2014-10-10 10:48 UTC, David Waring
committed Details | Review

Description David Waring 2014-09-26 10:56:11 UTC
Created attachment 287143 [details] [review]
dashdemux: Find first period for live streams

dashdemux assumes all streams start in the first period in the MPD. For live streams this may not be the case, current wall-clock time may fall within a later period.

Currently this will cause dashdemux to set-up for the first period, detect that it has immediately gone beyond the end of that period and move to the next, until it gets to the present period.

This patch finds the period within which the current wall-clock time falls, for live streams, and uses that when initialising playback so that playback starts within the right period.
Comment 1 David Waring 2014-09-26 10:59:04 UTC
http://rdmedia.bbc.co.uk/dash/testmpds/multiperiod/bbb.php can be used to demonstrate this bug.
Comment 2 David Waring 2014-10-10 10:48:48 UTC
Created attachment 288204 [details] [review]
dashdemux: Find first period for live streams

New version of the patch which also deals with the case when the MPD only has periods in the past.
Comment 3 Thiago Sousa Santos 2014-12-02 17:38:14 UTC
Updated the patch to latest dashdemux code and pushed, thanks


commit 95c3fdc193bb0339de630b9580b93690b2901a12
Author: David Waring <david.waring@rd.bbc.co.uk>
Date:   Fri Oct 10 11:24:08 2014 +0100

    dashdemux: Find the current period in a live stream
    
    Start from the correct period on a live stream
    
    https://bugzilla.gnome.org/show_bug.cgi?id=737421