dashdemux: Find the current period in a live stream

Start from the correct period on a live stream

https://bugzilla.gnome.org/show_bug.cgi?id=737421